		switch model.
	* cachesystem: updated for new interconnect model.

2010-02-22
	* memory.c, m2skernel.h: global memory 'mem_safe_mode'. Default value is
		true. If false, memory is accessed unsafely without providing
		segmentation faults.

2010-02-23
	* loader.c: the original argument list is not artificially modified
		anymore. There was a problem when the program header table was
		loaded for dynamic linking. The AT_ENTRY program header should
		store the entry point for the main program, and not for the
		program interpreter. Bug fixed. Still, dynamic loading does not
		work for other machines.
	* misc.c: function 'map_value_string' improved.
	* syscall.c: system call mmap and mmap2 fixed. The system call mmap takes
		its arguments from memory, instead of registers.
	* elf.c: function 'elf_merge_symtab' implemented, to merge symbol tables
		from an executable and the program interpreter.

2010-02-26
	* syscall.c: bug fixed in system call 'times'. Return value was treated
		as an error code, instead of the number of ticks since system
		start.
	* machine-ctrl.c: bug fixed in inst 'repz ret'. This instruction is
		equivalent to 'ret', regardless of the value of ecx, or flags.
	
2010-03-02
	* cachesystem.c: some bugs have been fixed when analyzing incorrect
		cache configuration files. The error messages have been updated
		to provide more information about the usage. There were some
		situations of wrong configurations that made the simulator crash.

2010-03-16
	* processor.c: -decode_width option added.
	* commit.c: bug fixed. Recover at commit didn't work properly.
	* libm2skernel/syscall.c: system call 'uname': debug information added.

2010-03-30
	Version 2.3 Released

2010-03-30
	* m2skernel.h: context lists updated with 'head' and 'tail' pointers.
	* syscall.c: syscall 'sched_getaffinity'
	* syscall:c: syscall 'fcntl64' with command F_GETFD.
	* configure.in: check for ncurses.

2010-04-16
	* m2s-pipeline.c: KEY_RESIZE event.
